--- a/GameShop/GameShop/Views/Products/Details.cshtml
+++ b/GameShop/GameShop/Views/Products/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            <img src="@Html.DisplayFor(model => model.Image)" alt="display" width="300" height="400" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -56,7 +56,7 @@
             @Html.DisplayNameFor(model => model.Trailer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Trailer)
+            <iframe src="@Html.DisplayFor(model => model.Trailer)" width="420" height="345"></iframe>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Consoles)
