--- a/GameShop/GameShop/Views/ConsolePages/Index.cshtml
+++ b/GameShop/GameShop/Views/ConsolePages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GameShop.Models.Console>
+﻿@model IEnumerable<GameShop.Models.ConsolePage>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th></th>
         </tr>
@@ -22,9 +22,11 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Type)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
+                <a asp-action="Home" asp-route-id="@item.Id">Home</a> |
+                <a asp-action="MainPage" asp-route-id="@item.Id">MainPage</a> |
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
