--- a/GameShop/GameShop/Views/Home/Index.cshtml
+++ b/GameShop/GameShop/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-3">Game Shop</h1>
+    <br/>
+    <form asp-action="Home" asp-controller="ConsolePages">
+        <button type="submit" name="Welcome" class="btn btn-primary">Welcome</button>
+    </form>
 </div>
