--- a/GameShop/GameShop/Views/Products/Index.cshtml
+++ b/GameShop/GameShop/Views/Products/Index.cshtml
@@ -9,6 +9,10 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="OrderBy">
+    <input list="search_list" class="form-control" />
+    <input type="submit" value="Search" class="btn btn-primary" />
+</form>
 <table class="table">
     <thead>
         <tr>
