--- a/GameShop/GameShop/Views/ConsolePages/Delete.cshtml
+++ b/GameShop/GameShop/Views/ConsolePages/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GameShop.Models.Console
+﻿@model GameShop.Models.ConsolePage
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,14 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Console</h4>
+    <h4>ConsolePage</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
     
