--- a/GameShop/GameShop/Views/Home/Index.cshtml
+++ b/GameShop/GameShop/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Game Shop</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+
+<div class="navbar">
+    <a class="btn btn-primary" href="#" role="button">Ps4Pro</a>
+    <button class="btn btn-primary" type="button" value="Ps5">Button</button>
+    <input class="btn btn-primary" type="button" value="Ps4">
+    <input class="btn btn-primary" type="button" value="XboxOne">
+    <input class="btn btn-primary" type="button" value="XboxXS">
+    <input class="btn btn-primary" type="button" value="Pc">
 </div>
