--- a/GameShop/GameShop/Views/Products/Create.cshtml
+++ b/GameShop/GameShop/Views/Products/Create.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<head>
+    <link rel="mystyle" href="~/css/StyleSheet1.css" />
+</head>
 <h1>Create</h1>
 
 <h4>Product</h4>
