--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewData["Title"] - GameShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/StyleSheet1.css"/>
+
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
