--- a/GameShop/GameShop/Views/ConsolePages/Home.cshtml
+++ b/GameShop/GameShop/Views/ConsolePages/Home.cshtml
@@ -3,11 +3,22 @@
 @{
     ViewData["Title"] = "Home";
 }
-<div class="navbar">
-    @foreach (var item in Model)
-    {
-        <form asp-action="MainPage" asp-route-id="@item.Id">
-            <button type="submit" name="@Html.DisplayFor(modelItem => item.Name)" class="btn btn-primary">@Html.DisplayFor(modelItem => item.Name)</button>
-        </form>
-    }
-</div>
+<head>
+    <link rel="stylesheet" href="~/css/style.css" />
+</head>
+<body>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-danger border-bottom box-shadow mb-3">
+        <div class="container">
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        @foreach (var item in Model)
+                        {
+                        <a class="nav-link text-white" asp-area="" asp-action="MainPage" asp-route-id="@item.Id" >@Html.DisplayFor(modelItem => item.Name)</a>
+                        }
+                    </li>
+                </ul>
+            </div>
+        </div>
+</nav>
+</body>
