--- a/GameShop/GameShop/Views/Products/Index.cshtml
+++ b/GameShop/GameShop/Views/Products/Index.cshtml
@@ -7,12 +7,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Product</a>
 </p>
-<form asp-action="OrderBy">
-    <input list="search_list" class="form-control" />
-    <input type="submit" value="Search" class="btn btn-primary" />
-</form>
 <table class="table">
     <thead>
         <tr>
