--- a/GameShop/GameShop/Views/ConsolePages/Create.cshtml
+++ b/GameShop/GameShop/Views/ConsolePages/Create.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="white">Create</h1>
 
-<h4>ConsolePage</h4>
+<h4 class="white">ConsolePage</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="white">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div>
+<div class="white">
     <a asp-action="Index">Back to List</a>
 </div>
 
