--- a/GameShop/GameShop/Views/Home/Index.cshtml
+++ b/GameShop/GameShop/Views/Home/Index.cshtml
@@ -2,11 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-<div class="text-center">
-    <h1 class="display-3">Game Shop</h1>
-    <br/>
-    <form asp-action="Home" asp-controller="ConsolePages">
-        <button type="submit" name="Welcome" class="btn btn-primary">Welcome</button>
-    </form>
+<div class="white">
+    <div class="text-center">
+        <h1 class="display-3">Game Shop</h1>
+        <br />
+        <form asp-action="Home" asp-controller="ConsolePages">
+            <button type="submit" name="Welcome" class="btn btn-primary">Welcome</button>
+        </form>
+    </div>
 </div>
