--- a/GameShop/GameShop/Views/Products/GamePage.cshtml
+++ b/GameShop/GameShop/Views/Products/GamePage.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "GamePage";
 }
 
-<div>
+<div class="white">
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
