--- a/GameShop/GameShop/Views/Products/Index.cshtml
+++ b/GameShop/GameShop/Views/Products/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="white">Index</h1>
 
-<p>
+<p class="white">
     <a asp-action="Create">Create New Product</a>
 </p>
 <table class="table">
-    <thead>
+    <thead class="white">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Image)
@@ -44,7 +44,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr class="white">
             <td>
                <img src="@Html.DisplayFor(modelItem => item.Image)" alt="display" width="150" height="150" />
             </td>
