--- a/GameShop/GameShop/Views/Users/AccessDenied.cshtml
+++ b/GameShop/GameShop/Views/Users/AccessDenied.cshtml
@@ -2,8 +2,9 @@
 @{
     ViewData["Title"] = "AccessDenied";
  }
-<h1>Oppppppsssssi!!!!!!</h1>
-<h2>You are not authorized to access this page.</h2>
+<h1 class="white">Oppppppsssssi!!!!!!</h1>
+<h2 class="white">You are not authorized to access this page.</h2>
 
-
-<a asp-action="Logout">Click here</a> to signin using a different user
+<div class="white">
+    <a asp-action="Logout">Click here</a> to signin using a different user
+</div>
