--- a/GameShop/GameShop/Views/ConsolePages/Details.cshtml
+++ b/GameShop/GameShop/Views/ConsolePages/Details.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-<div>
+<h1 class="white">Details</h1>
+<div class="white">
     <h4>ConsolePage</h4>
     <hr />
     <dl class="row">
@@ -17,7 +17,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="white">
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
