--- a/GameShop/GameShop/Views/Home/Privacy.cshtml
+++ b/GameShop/GameShop/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="white">@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p class="white">Use this page to detail your site's privacy policy.</p>
