--- a/GameShop/GameShop/Views/Products/Delete.cshtml
+++ b/GameShop/GameShop/Views/Products/Delete.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="white">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<h3 class="white">Are you sure you want to delete this?</h3>
+<div class="white">
     <h4>Product</h4>
     <hr />
     <dl class="row">
@@ -67,7 +67,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" class="white">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
