--- a/GameShop/GameShop/Views/ShoppingCarts/Delete.cshtml
+++ b/GameShop/GameShop/Views/ShoppingCarts/Delete.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="white">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<h3 class="white">Are you sure you want to delete this?</h3>
+<div class="white">
     <h4>ShoppingCart</h4>
     <hr />
     <dl class="row">
