--- a/GameShop/GameShop/Views/ShoppingCarts/Edit.cshtml
+++ b/GameShop/GameShop/Views/ShoppingCarts/Edit.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="white">Edit</h1>
 
-<h4>ShoppingCart</h4>
+<h4 class="white">ShoppingCart</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="white">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<div>
+<div class="white">
     <a asp-action="Index">Back to List</a>
 </div>
 
