--- a/GameShop/GameShop/Views/ShoppingCarts/Index.cshtml
+++ b/GameShop/GameShop/Views/ShoppingCarts/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="white">Index</h1>
 
-<p>
+<p class="white">
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
+    <thead class="white">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.TotalPrice)
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr class="white">
             <td>
                 @Html.DisplayFor(modelItem => item.TotalPrice)
             </td>
