--- a/GameShop/GameShop/Views/Users/Details.cshtml
+++ b/GameShop/GameShop/Views/Users/Details.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1 class="white">Details</h1>
 
-<div>
+<div class="white">
     <h4>User</h4>
     <hr />
     <dl class="row">
@@ -36,7 +36,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="white">
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
