--- a/GameShop/GameShop/Views/Users/Index.cshtml
+++ b/GameShop/GameShop/Views/Users/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="white">Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
+<p class="white">
+    <a asp-action="Register" >Create New</a>
 </p>
 <table class="table">
-    <thead>
+    <thead class="white">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -29,7 +29,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr class="white">
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
