--- a/GameShop/GameShop/Views/Home/Index.cshtml
+++ b/GameShop/GameShop/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 <div class="white">
-    <div class="text-center">
+    <div class="text-center justify-content-around">
         <h1 class="display-3">Game Shop</h1>
         <br />
         <form asp-action="Home" asp-controller="ConsolePages">
-            <button type="submit" name="Welcome" class="btn btn-primary">Welcome</button>
+            <button type="submit" name="Welcome" class="btn btn-primary ">Welcome</button>
         </form>
     </div>
 </div>
